Polish macOS panel UI and exports

--- a/landing/index.html
+++ b/landing/index.html
@@ -45,8 +45,8 @@
                     <input type="text" name="name" placeholder="Avery Chen" autocomplete="name" />
                   </label>
                   <label>
-                    Work email
-                    <input type="email" name="email" placeholder="you@company.com" autocomplete="email" required />
+                    Email
+                    <input type="email" name="email" placeholder="you@email.com" autocomplete="email" required />
                   </label>
                 </div>
                 <div class="form-row">
@@ -203,8 +203,8 @@
           <form class="waitlist-form" data-waitlist>
             <div class="form-row">
               <label>
-                Work email
-                <input type="email" name="email" placeholder="you@company.com" required />
+                Email
+                <input type="email" name="email" placeholder="you@email.com" required />
               </label>
               <label>
                 Role
