Animate hero visual with anime.js

--- a/landing/index.html
+++ b/landing/index.html
@@ -66,11 +66,11 @@
             </div>
           </div>
           <div class="hero-visual">
-            <div class="menu-bar">
+            <div class="menu-bar" data-hero-bar>
               <div class="menu-dot listening"></div>
               <span>EchoPanel · 12:34</span>
             </div>
-            <div class="panel">
+            <div class="panel" data-hero-panel>
               <div class="panel-header">
                 <div>
                   <div class="panel-title">Live Meeting Listener</div>
