--- a/landing/index.html
+++ b/landing/index.html
@@ -66,6 +66,11 @@
             </div>
           </div>
           <div class="hero-visual">
+            <div class="hero-mesh" aria-hidden="true">
+              <span class="mesh-orb orb-one"></span>
+              <span class="mesh-orb orb-two"></span>
+              <span class="mesh-orb orb-three"></span>
+            </div>
             <div class="menu-bar" data-hero-bar>
               <div class="menu-dot listening"></div>
               <span>EchoPanel · 12:34</span>
