Fill hero panel content and remove floating motion

--- a/landing/index.html
+++ b/landing/index.html
@@ -95,6 +95,10 @@
                       <span class="time">12:33</span>
                       <span>I'll send the proposal tomorrow.</span>
                     </div>
+                    <div class="line faint">
+                      <span class="time">12:34</span>
+                      <span>Let's keep the scope focused.</span>
+                    </div>
                   </div>
                 </div>
                 <div class="panel-column">
@@ -108,12 +112,25 @@
                     <div>Ship v0.1 on Friday</div>
                     <div class="meta">74%</div>
                   </div>
+                  <h4>Risks</h4>
+                  <div class="panel-card">
+                    <div>Audio quality during screen share</div>
+                    <div class="meta">61%</div>
+                  </div>
                 </div>
                 <div class="panel-column">
                   <h4>Entities</h4>
                   <div class="panel-card">
                     <div>EchoPanel · org</div>
                     <div class="meta">Last seen 12:31 · 88%</div>
+                  </div>
+                  <div class="panel-card">
+                    <div>Friday · date</div>
+                    <div class="meta">Last seen 12:31 · 71%</div>
+                  </div>
+                  <div class="panel-card">
+                    <div>ScreenCaptureKit · topic</div>
+                    <div class="meta">Last seen 12:33 · 74%</div>
                   </div>
                 </div>
               </div>
