Update landing footer to echopanel.studio

--- a/landing/index.html
+++ b/landing/index.html
@@ -282,7 +282,8 @@
       <footer class="footer">
         <div>EchoPanel · macOS Live Meeting Listener</div>
         <div class="footer-links">
-          <a href="mailto:hello@echopanel.ai">hello@echopanel.ai</a>
+          <a href="https://echopanel.studio">echopanel.studio</a>
+          <a href="mailto:hello@echopanel.studio">hello@echopanel.studio</a>
           <a href="#">Privacy</a>
         </div>
       </footer>
