--- a/landing/index.html
+++ b/landing/index.html
@@ -28,7 +28,7 @@
             <h1>Live meeting notes from any Mac audio.</h1>
             <p>
               Start listening with one click. EchoPanel streams system audio to produce a live transcript plus
-              Actions, Decisions, Risks, and Entities in real time.
+              Actions, Decisions, Risks, and Entities. Processed locally on your Mac.
             </p>
             <ul class="hero-bullets">
               <li>Works with Meet, Zoom, Teams, video playback, and in person audio</li>
@@ -37,7 +37,7 @@
             </ul>
             <div class="hero-form" id="waitlist">
               <h3>Join the waitlist</h3>
-              <p>Be the first to try the v0.1 beta.</p>
+              <p>Be the first to try the v0.2 private beta.</p>
               <form class="waitlist-form" data-waitlist>
                 <div class="form-row">
                   <label>
@@ -109,7 +109,7 @@
                   </div>
                   <h4>Decisions</h4>
                   <div class="panel-card">
-                    <div>Ship v0.1 on Friday</div>
+                    <div>Ship v0.2 on Friday</div>
                     <div class="meta">74%</div>
                   </div>
                   <h4>Risks</h4>
@@ -147,7 +147,7 @@
       <section class="section">
         <div class="section-header">
           <h2>Everything you need without integrations.</h2>
-          <p>EchoPanel captures what is already playing on your Mac. No bots. No calendar setup.</p>
+          <p>EchoPanel captures what is already playing on your Mac. No bots. Offline processing. Zero friction.</p>
         </div>
         <div class="value-grid">
           <div class="value-card">
@@ -200,16 +200,7 @@
           <h2>Live flow, end to end</h2>
           <p>See the whole loop from menu bar toggle to exportable outputs.</p>
         </div>
-        <div class="flow-track" data-flow-track>
-          <div class="flow-line"></div>
-          <div class="flow-progress" data-flow-progress></div>
-          <div class="flow-node active" data-flow-node>Start listening</div>
-          <div class="flow-node" data-flow-node>Stream audio</div>
-          <div class="flow-node" data-flow-node>ASR partials</div>
-          <div class="flow-node" data-flow-node>Cards & entities</div>
-          <div class="flow-node" data-flow-node>Export notes</div>
-          <div class="flow-playhead" data-flow-head></div>
-        </div>
+
         <div class="flow-cards">
           <div class="flow-card active" data-flow-card>
             <h3>Start in the menu bar</h3>
@@ -258,7 +249,7 @@
       <section class="section waitlist">
         <div class="section-header">
           <h2>Get early access</h2>
-          <p>We are onboarding a small number of teams for the v0.1 beta.</p>
+          <p>We are onboarding a small number of people for the v0.2 private beta.</p>
         </div>
         <div class="waitlist-card">
           <form class="waitlist-form" data-waitlist>
